--- a/fanli3.html
+++ b/fanli3.html
@@ -41,7 +41,9 @@
             padding: 1px 16px;
             color: #fff;
         }
-
+        main{
+            padding:16px;
+        }
     </style>
 </head>
 <body>
