--- a/fanli3.html
+++ b/fanli3.html
@@ -44,6 +44,9 @@
         main{
             padding:16px;
         }
+        p{
+            display: block;
+        }
     </style>
 </head>
 <body>
