--- a/fanli4.html
+++ b/fanli4.html
@@ -58,11 +58,11 @@
            </li>
            <li >
                <a href="#" >更多</a>
-                <li class="boy">
+                <div class="boy">
                     <a href="#">Github</a>
                     <a href="#">博客</a>
                     <a href="#">知乎</a>
-                </li>
+                </div>
            </li>
        </ul>
 
