--- a/fanli4.html
+++ b/fanli4.html
@@ -38,6 +38,7 @@
             position: absolute;
             top: 100%;
             left: 0;
+            min-width: 160px;
             display: none;
             box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.16);
         }
