--- a/fengjing.html
+++ b/fengjing.html
@@ -36,6 +36,14 @@
             display:block;
             margin-left:-10px;
         }
+        p{
+            line-height: 52px;
+            text-align: center;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            white-space: nowrap;
+            font-weight: bold;
+        }
 
     </style>
 </head>
