--- a/zizhi/index.html
+++ b/zizhi/index.html
@@ -2,43 +2,550 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>简历</title>
+    <title>介绍</title>
+    <link rel="stylesheet" href="icon/iconfont.css">
+    <style>
+        *{
+            margin: 0;
+            padding: 0;
+        }
+        nav{
+            background-color: rgba(40,53,79,.9);
+            height: 65px;
+            position: fixed;
+            top: 0;
+            left: 0;
+            opacity: .8;
+            width: 100%;
+            z-index: 999;
+        }
+        nav h3{
+            font-size: 44px;
+            font-family: 黑体;
+            color: #ffffcc;
+            margin-left: 32px;
+            line-height: 65px;
+        }
+        nav>ul,li{
+            list-style-type: none;
+        }
+        nav ul{
+            position: absolute;
+            right:50px;
+            top:20px;
+        }
+        nav li{
+            float:left;
+            margin-left: 8px;
+            font-size: 24px;
+            font-family: 楷体;
+
+
+        }
+        nav a{
+            text-decoration: none;
+            color: rgba(255,255,255,.85);
+            display: block;
+
+
+        }
+        .clearfix:after{
+            content: "";
+            display: block;
+            clear: both;
+        }
+        nav a:hover{
+            color: black;
+            background-color: aquamarine;
+        }
+        .content{
+            background-image: url("./img/h-5.jpg") ;
+            background-repeat: no-repeat;
+            height: 1100px;
+            position: relative;
+            z-index: 900;
+        }
+        .head-center{
+            position: absolute;
+            top:50%;
+            left: 50%;
+            width: 800px;
+            height: 400px;
+            margin-left: -400px;
+            margin-top: -200px;
+            text-align: center;
+            color: chartreuse;
+        }
+        .head-center h3{
+            font-size: 88px;
+            font-family: 微软雅黑;
+        }
+        .head-center p{
+            font-size: 45px;
+            font-family: 微软雅黑;
+            font-weight: bold;
+            margin-bottom: 50px;
+        }
+        .head-center a{
+            font-weight: bold;
+            text-decoration: none;
+            border-radius: 3px;
+            background-color: #ff9c00;
+            font-size: 34px;
+            padding: 10px;
+            color: white;
+        }
+        section{
+            width: 1260px;
+            text-align: center;
+            margin: 0 auto;
+        }
+        section img{
+            width: 400px;
+            height: 300px;
+            vertical-align: middle;
+            margin-bottom: 40px;
+        }
+        section h3{
+            font-size: 80px;
+            font-weight: bold;
+            font-family: 黑体;
+            text-align: center;
+        }
+        section ul li{
+            list-style-type: none;
+        }
+        section li{
+            float: left;
+            display: block;
+            margin-right: 20px;
+        }
+        section li h4{
+            font-size: 40px;
+            font-weight: bold;
+            font-family: 黑体;
+            text-align: center;
+        }
+        article{
+            width: 100%;
+            margin-top: 20px;
+            background-color: turquoise;
+            padding-top: 30px;
+        }
+        article h2{
+            text-align: center;
+            font-size: 80px;
+            font-weight: bold;
+            font-family: 黑体;
+
+        }
+        .a-content{
+            margin: 0 auto;
+            width: 1300px;
+        }
+        .a-content img{
+            width: 250px;
+            background-color: #ff9c00;
+
+        }
+        .a-content li{
+            float: left;
+            margin-left: 5px;
+            margin-bottom: 10px;
+            text-align: center;
+            position: relative;
+        }
+        .a-content>h3{
+            font-size: 40px;
+            font-weight: bold;
+            font-family: 黑体;
+            background-color: #ff9c00;
+            color: aliceblue;
+
+        }
+
+        #introduce{
+
+            background: rgba(0,0,0,0.1);
+        }
+        #introduce>.container{
+            margin: 0 auto;
+            width: 80%;
+            padding-top: 40px;
+        }
+        #introduce>.container>h2{
+            line-height: 40px;
+            font-size: 40px;
+            padding-left: 20px;
+
+        }
+
+        #introduce ul{
+            padding-top: 30px;
+        }
+        #introduce li{
+            display: block;
+        }
+        .img1{
+            width: 200px;
+            height: 200px;
+            border-radius: 50%;
+            border: 4px solid mediumvioletred;
+            position: absolute;
+            left: 50%;
+            margin-left: -100px;
+            background: #fff url("img/DIV.jpg") no-repeat ;
+            background-size:cover;
+        }
+        .img2{
+            width: 200px;
+            height: 200px;
+            border-radius: 50%;
+            border: 4px solid blue;
+            position: absolute;
+            left: 50%;
+            margin-left: -100px;
+            background: #fff url("img/GF.jpg") no-repeat ;
+            background-size:cover;
+        }
+        .img3{
+            width: 200px;
+            height: 200px;
+            border-radius: 50%;
+            border: 4px solid yellow;
+            position: absolute;
+            left: 50%;
+            margin-left: -100px;
+            background: #fff url("img/csg.jpg") no-repeat ;
+            background-size:cover;
+        }
+        .img4{
+            width: 200px;
+            height: 200px;
+            border-radius: 50%;
+            border: 4px solid green;
+            position: absolute;
+            left: 50%;
+            margin-left: -100px;
+            background: #fff url("img/CDT.jpg") no-repeat ;
+            background-size:cover;
+        }
+
+        .text-left{
+            width: 30%;
+            height: 300px;
+            padding-right: 10%;
+            margin-left: 10%;
+            border-right: 4px solid #50b332;
+        }
+       .text-right{
+            width: 30%;
+            height: 300px;
+            margin-left: 50%;
+            border-left: 4px solid #50b332;
+            padding-left: 15%;
+        }
+        .text-last{
+            border-left: 0 solid white;
+        }
+        #introduce h2{
+            padding-top: 50px;
+        }
+        #introduce p{
+            margin-top: 20px;
+            text-indent: 2em;
+            line-height: 1.5;
+        }
+        .contact{
+            width: 100%;
+            height: 100%;
+            background: url("img/YS.jpg") no-repeat;
+            background-size: cover;
+            min-height: 800px;
+            position: relative;
+        }
+        .contact>.container{
+            width: 80%;
+            position: absolute;
+            left: 50%;
+            top: 50%;
+            margin: -100px 0 0 -40%;
+        }
+        .contact h2{
+            line-height: 40px;
+            font-size: 40px;
+            text-align: center;
+            color: gold;
+        }
+        .contact p{
+            color: gold;
+            text-align: center;
+            font-size: 20px;
+            margin: 20px;
+        }
+        .contact form{
+            position: relative;
+            padding-bottom: 50px;
+        }
+
+        .contact form:after{
+            display: block;
+            content: "";
+            clear: both;
+        }
+
+        .contact li{
+            width: 50%;
+            float: left;
+            display: inline-block;
+        }
+        .contact input[type="text"]{
+            display: inline;
+            width: 70%;
+            height: 60px;
+            margin-left: 20%;
+            margin-bottom: 20px;
+            border: 1px solid rgba(0,0,0,0.1);
+            border-radius: 4px;
+        }
+        .contact textarea{
+            resize: none;
+            width: 80%;
+            height: 220px;
+            border: 1px solid rgba(0,0,0,0.1);
+            border-radius: 4px;
+            margin-bottom: 20px;
+        }
+        .contact input[type="submit"]{
+            font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
+            color: black;
+            background-color: gold;
+            font-size: 19px;
+            padding: 10px 40px;
+            border: 1px solid rgba( 0,0,0,0.1);
+            border-radius: 3px ;
+            position: absolute;
+            left: 10%;
+            bottom: 0;
+            cursor: pointer;
+            position: absolute;
+            left: 50%;
+        }
+        .contact input[type="submit"]:hover{
+            background-color: pink;
+            transition: .5s;
+        }
+        footer{
+            height: 50px;
+        }
+        footer ul{
+            padding: 20px;
+            background: rgba(0,0,0,0.1);
+            display: flex;
+            justify-content: space-between;
+            align-items: flex-start
+        }
+        footer a{
+            text-decoration: none;
+        }
+        footer i:hover{
+            transform: rotate(-360deg);
+        }
+
+    </style>
 </head>
 <body>
-  <div class="container">
-      <div class="sidebar">
-          <div class="title">
-              <img src="">
-              <h1>白斩祭的简历</h1>
-              <h2>follow heart follow code</h2>
-          </div>
-          <ul class="contact">
-              <li>
-                  <dt>联系方式</dt>
-                  <dd>邮箱：XXXXXX@XXX.com</dd>
-                  <dd>手机：XXXXXXXXXXXX</dd>
-                  <dd>github:XXXXXXXXXXX</dd>
-                  <dd>QQ:xxxxxxxxxxxx</dd>
-              </li>
-              <li>
-                  <dt>应聘岗位</dt>
-                  <dd>前端工程师</dd>
-              </li>
-              <li>
-                  <dt>技能点</dt>
-                  <dd>html：了解</dd>
-                  <dd>css：了解</dd>
-                  <dd>JavaScript：了解</dd>
-              </li>
-              <li></li>
-          </ul>
-          <div class="note">
-              <p></p>
-          </div>
-      </div>
-      <div class="main"></div>
-  </div>
+   <nav>
+       <h3>守望先锋</h3>
+       <ul class="menu clearfix">
 
+           <li>
+               <a class="nav-btn" href="#">英雄角色</a>
+           </li>
+           <li>
+               <a class="nav-btn"href="#">视频图片</a>
+           </li>
+           <li>
+               <a href="#"class="nav-btn">生涯数据</a>
+           </li>
+           <li>
+               <a href="#"class="nav-btn">电子竞技</a>
+           </li>
+           <li>
+               <a href="#"class="nav-btn">登入论坛</a>
+           </li>
+
+       </ul>
+   </nav>
+   <header>
+       <div class="content">
+           <div class="head-center">
+               <h3>为未来而战</h3>
+               <p>如今，世界各地争端再起，人们都翘首期待着新英雄的出现和旧英雄的归来。</p>
+               <p>你愿意与我们共同抗争吗？</p>
+               <a href="#" class="header-btn">加入战斗</a>
+
+           </div>
+       </div>
+   </header>
+   <section>
+       <h3>玩法介绍</h3>
+       <ul class="sec-content clearfix">
+           <li>
+               <img src="./img/h-6.jpg">
+               <h4>选择英雄</h4>
+           </li>
+           <li>
+               <img src="./img/h-7.jpg">
+               <h4>扮演你的角色</h4>
+
+           </li>
+           <li>
+               <img src="./img/h-8.jpg">
+               <h4>地图</h4>
+
+           </li>
+       </ul>
+   </section>
+   <article>
+       <h2>英雄介绍</h2>
+       <ul class="a-content clearfix">
+           <li>
+                   <img src="./img/76.jpg">
+                   <h3>76号士兵</h3>
+               </a>
+           </li>
+           <li>
+               <img src="./img/as.jpg">
+               <h3>阿三</h3>
+           </li>
+           <li>
+               <img src="./img/bz.jpg">
+               <h3>ADC</h3>
+           </li>
+           <li>
+               <img src="./img/dc.jpg">
+               <h3>大锤</h3>
+           </li>
+           <li>
+               <img src="./img/fj.jpg">
+               <h3>法鸡</h3>
+           </li>
+           <li>
+               <img src="./img/hs.jpg">
+               <h3>和尚</h3>
+           </li>
+           <li>
+               <img src="./img/mkl.jpg">
+               <h3>麦克雷</h3>
+           </li>
+           <li>
+               <img src="./img/mm.jpg">
+               <h3>毛妹</h3>
+           </li>
+           <li>
+               <img src="./img/ptjpg.jpg">
+               <h3>堡垒</h3>
+           </li>
+           <li>
+               <img src="./img/sg.jpg">
+               <h3>闪光</h3>
+           </li>
+           <li>
+               <img src="./img/ss.jpg">
+               <h3>死神</h3>
+           </li>
+           <li>
+               <img src="./img/tbg.jpg">
+               <h3>托比昂</h3>
+           </li>
+           <li>
+               <img src="./img/ts.jpg">
+               <h3>天使</h3>
+           </li>
+           <li>
+               <img src="./img/xx.jpg">
+               <h3>猩猩</h3>
+           </li>
+       </ul>
+
+   </article>
+   <div id="introduce">
+       <div class="container">
+           <h2>COSPLAY:</h2>
+           <div class="info">
+               <ul>
+                   <li>
+                       <div class="img1"></div>
+                       <div class="text-left">
+                           <h2>DVA</h2>
+                           <p>D.Va不得不说也是一个创意英雄，她也是唯一一个拥有2个大招的英雄。她操控机甲进行战斗，关键时刻还可以将机甲引爆，而本体脱身。机甲的独特战斗技能也让大家耳目一新。</p>
+                       </div>
+                   </li>
+                   <li>
+                       <div class="img2"></div>
+                       <div class="text-right">
+                           <h2>寡妇</h2>
+                           <p>对于FPS老玩家来说，守望先锋中的黑寡妇绝对是一个不错的选择，有着多年狙击经验的玩家们，利用这一可怕的狙击英雄将在游戏中成为可怕的存在</p>
+                       </div>
+                   </li>
+                   <li>
+                       <div class="img3"></div>
+                       <div class="text-left">
+                           <h2>闪光</h2>
+                           <p>　莉娜·奥克斯顿(代号：“猎空者”)是守望先锋原型机试飞计划的最年轻成员。由于其大胆的飞行技术，她被选为一架可进行传送的原型战机，“跃空者”的试飞员。但在第一次试飞过程中，原型机的传送阵列出现故障，包括飞行员在内完全失踪。莉娜也因此被认定为已阵亡。</p>
+                       </div>
+                   </li>
+                   <li>
+                       <div class="img4"></div>
+                       <div class="text-right text-last">
+                           <h2>半藏</h2>
+                           <p>半藏的弓箭具备有不同的功能，既可以侦测敌情，也可以分散成数股箭矢攻击多个敌人。他还可以攀爬墙壁，从高处攻击敌人，或是召唤巨大的巨龙之魂冲击敌人。</p>
+                       </div>
+                   </li>
+
+               </ul>
+           </div>
+       </div>
+   </div>
+   <div class="contact">
+       <div class="container">
+           <h2>加入守望先锋的行列</h2>
+           <p>或联系我们</p>
+
+           <form action="#" method="post">
+               <ul>
+                   <li>
+                       <input type="text" name="name" placeholder="yourname">
+                       <input type="text" name="email" placeholder="e-mail">
+                       <input type="text" name="phone" placeholder="phone">
+                   </li>
+                   <li>
+                       <textarea name="message" id="" cols="30" rows="10" placeholder="support？"></textarea>
+                   </li>
+               </ul>
+               <input type="submit" value="send">
+           </form>
+       </div>
+   </div>
+   <footer>
+       <div class="f-content">
+           <ul>
+               <li>
+                   <p>Copyright ©  2017</p>
+               </li>
+               <li>
+                   <i class="iconfont icon-xihuan"></i>
+                  <i class="iconfont icon-bofang"></i>
+                   <i class="iconfont icon-yinle"></i>
+               </li>
+               <li>
+                   <a href="#contact">Privacy Policy</a>
+                   <a href="#contact">Terms of Use</a>
+               </li>
+           </ul>
+       </div>
+   </footer>
 
 </body>
 </html>
