--- a/zizhi/index.html
+++ b/zizhi/index.html
@@ -351,6 +351,21 @@
         footer i:hover{
             transform: rotate(-360deg);
         }
+         article img:hover{
+            opacity: .5;
+            background-color: yellow;
+            background-size: 50px 50px;
+            background-position: center;
+            background-repeat: no-repeat;
+        }
+        section img:hover{
+            opacity: .5;
+            background-color: yellow;
+            background-size: 50px 50px;
+            background-position: center;
+            background-repeat: no-repeat;
+
+        }
 
     </style>
 </head>
