--- a/导航栏.html
+++ b/导航栏.html
@@ -119,7 +119,7 @@
     </div>
 </body>
 <script src="http://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
-<script src="./jquery-3.2.1.js"></script>
+<script src="http://apps.bdimg.com/libs/jquery/3.2.1/jquery.js"></script>
 <script>
     //console.log($('span').eq(0));
     //  var span = $('span:odd')
