--- a/渐变轮播.html
+++ b/渐变轮播.html
@@ -92,8 +92,8 @@
         <li style="display: list-item;"><a href="#"><img src="http://cdn.jirengu.com/book.jirengu.com/img/4.jpg" alt=""></a></li>
         <li style="display: none;"><a href="#"><img src="http://cdn.jirengu.com/book.jirengu.com/img/5.jpg" alt=""></a></li>
     </ul>
-    <a class="btn btn-pre" href="#"><i class="iconfont">㐼</i></a>
-    <a class="btn btn-nxt" href="#"><i class="iconfont">㐻</i></a>
+    <a class="btn btn-pre" href="#"><i class="iconfont">前</i></a>
+    <a class="btn btn-nxt" href="#"><i class="iconfont">后</i></a>
     <ul class="bullet">
         <li class=""></li>
         <li class=""></li>
