--- a/渐变轮播.html
+++ b/渐变轮播.html
@@ -102,7 +102,8 @@
     </ul>
 </div>
 
-<script src="http://apps.bdimg.com/libs/jquery/2.1.4/jquery.js"></script>
+<script src="//code.jquery.com/jquery-2.1.1.min.js"></script>
+
 <script>
 
     $(function(){
