--- a/轮播.html
+++ b/轮播.html
@@ -89,12 +89,12 @@
 <body>
 
 <div class="wrap">
-    <ul class="img-ct" style="width: 2700px; left: -1350px;"><li><a href="#"><img src="http://cdn.jirengu.com/book.jirengu.com/img/5.jpg" alt=""></a></li>
+    <ul class="img-ct" style="width: 2700px; left: -1350px;">
         <li><a href="#"><img src="http://cdn.jirengu.com/book.jirengu.com/img/2.jpg" alt=""></a></li>
         <li><a href="#"><img src="http://cdn.jirengu.com/book.jirengu.com/img/3.jpg" alt=""></a></li>
         <li><a href="#"><img src="http://cdn.jirengu.com/book.jirengu.com/img/4.jpg" alt=""></a></li>
         <li><a href="#"><img src="http://cdn.jirengu.com/book.jirengu.com/img/5.jpg" alt=""></a></li>
-        <li><a href="#"><img src="http://cdn.jirengu.com/book.jirengu.com/img/2.jpg" alt=""></a></li></ul>
+     </ul>
     <a class="btn btn-pre" href="#"><i class="iconfont">前</i></a>
     <a class="btn btn-nxt" href="#"><i class="iconfont">后</i></a>
     <ul class="bullet">
