--- a/18木桶流.html
+++ b/18木桶流.html
@@ -155,7 +155,7 @@
                 color = Math.random().toString(16).substring(2, 8);
                 width = Math.floor(Math.random() * 100 + 50);
                 height = Math.floor(Math.random() * 30 + 50);
-                urls.push("http://placehold.it/" + width + "x" + height + "/" + color + "/fff");
+                urls.push("https://placehold.it/" + width + "x" + height + "/" + color + "/fff");
             }
             return urls;
         }
@@ -229,7 +229,7 @@
                 color = Math.random().toString(16).substring(2, 8);
                 width = Math.floor(Math.random() * 100 + 50);
                 height = Math.floor(Math.random() * 30 + 50);
-                urls.push("http://placehold.it/" + width + "x" + height + "/" + color + "/fff");
+                urls.push("https://placehold.it/" + width + "x" + height + "/" + color + "/fff");
             }
             return urls;
         }
